梅赛德斯-目录重生成

--- a/OEBPS/Text/c020.xhtml
+++ b/OEBPS/Text/c020.xhtml
@@ -134,7 +134,7 @@
     <p>因此他下定决心，向狂暴的贝赛德兽挑战。</p>
     <p>本应是父亲的伯恩哈特，却用冰冷的金色瞳孔静观着他的身影。</p>
     <p class="divline"></p>
-    <p>梅赛德斯（观察一会儿吧）</p>
-    <p>伯恩哈特（要静观一会儿吗）</p>
+    <p>梅赛德斯（先观察一会儿吧）</p>
+    <p>伯恩哈特（先静观一会儿吧）</p>
     <p>有关血的强度，父母以高个体值拿红线的一方孩子变得强象同样一样的东西。</p>
 </body>
