译名统一。63机翻处理

--- a/OEBPS/Text/c048.xhtml
+++ b/OEBPS/Text/c048.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>48.  解决一件事？</h1>
+    <h1>48. 解决一件事？</h1>
     <p>自菲利克斯袭击一朝天黑的夜晚。</p>
     <p>梅赛德斯、吉克林德、汉娜、菲利克斯四人聚集在梅赛德斯的房间里，就事件进行了商谈。</p>
     <p>据说，那身白衣在无力化之后，汉娜的部下们收回，对其进行了盘问。</p>
@@ -90,13 +90,13 @@
     <p>“……被敌人说了吗？</p>
     <p>「啊。不，其实我也隐隐约约地这么想。</p>
     <p>我跟父亲一点都不像，头发的颜色也不一样。所以……或许，母亲是和其他男人生下的孩子……我一直在想”</p>
-    <p>“提起菲利克斯的母亲，应该是瓦尔布加吧。</p>
+    <p>“提起菲利克斯的母亲，应该是瓦尔堡加吧。</p>
     <p>虽然我不认为这是出轨之类的吸血鬼人……啊—，但是老公那么想花心也不奇怪吧」</p>
     <p>看来菲利克斯的母亲是瓦尔堡加。</p>
     <p>在生日会上见过一次桃色头发的女性应该是菲利克斯的母亲。</p>
     <p>虽然外表看起来很可怜的夫人，但名字却相当雄伟。</p>
     <p>即使是人类乘坐的巨大机器人的名字也不会有不协调感，是个很帅气的名字。</p>
-    <p>合体机神瓦尔布加，为了地球的未来而起飞！</p>
+    <p>合体机神瓦尔堡加，为了地球的未来而起飞！</p>
     <p>“因为你没有调查过……也就是说，就算是弟弟的媳妇，也不会调查不是敌人的对方的私生活……”</p>
     <p>汉娜挽着胳膊，很为难。</p>
     <p>实际上，就算菲利克斯是出轨的孩子也不会有不协调感。</p>
