--- a/OEBPS/Text/c052.xhtml
+++ b/OEBPS/Text/c052.xhtml
@@ -44,10 +44,10 @@
     <p>只是用笑容迎接回来的女儿。</p>
     <p>跑过那样的她的旁边，桃色的头发的女性ferixu抱住了。</p>
     <p>“欢迎回来，我的菲利克斯！有没有受伤？在学园没有被欺负吗？”</p>
-    <p>“哈，母亲……我回来了”</p>
+    <p>“嗯，母亲……我回来了”</p>
     <p>菲利克斯的母亲。</p>
     <p>名字是……你叫什么名字？</p>
-    <p>对了，我记得是机动战士瓦尔布加。</p>
+    <p>对了，我记得是机动战士瓦尔堡加。</p>
     <p>不对，是瓦尔堡·格鲁内瓦特。她是有外遇嫌疑的妇女。</p>
     <p>瓦尔堡加紧盯着梅赛德斯，就那样拖着菲利克斯走了。</p>
     <p>那位好像是肌肤接触过剩的母亲。</p>
@@ -70,13 +70,13 @@
     <p>与明亮的时候行动的法鲁什没有深夜食同样，吸血鬼没有早餐。</p>
     <p>因为对于吸血鬼来说，早晨和其他法鲁什相比就如同深夜一般。</p>
     <p>据说当天的正餐晚餐全家一起吃，在格鲁内瓦特家成为了新奇的情况。</p>
-    <p>在伯恩哈特，他的妻子瓦尔布加。以琉迪亚为首的侧室的女性四人。　</p>
+    <p>在伯恩哈特，他的妻子瓦尔堡加。以琉迪亚为首的侧室的女性四人。　</p>
     <p>还有菲利克斯、梅赛德斯、莫尼卡、玛吉特、戈特弗里特等。</p>
     <p>首先端出来的菜是理所当然的香肠。</p>
     <p>一口咬下去肉汁就溢出来，被浓郁的肉美味所包围的香草和香料的香味直接冲击了味觉。</p>
     <p>味浓而疲惫的舌头，配上马铃薯沙拉奶油冻的清爽口感十分相配。</p>
-    <p>下一道菜是将烤箱烤成圆形的烤面包赫尔克尔烤成豪华的烤箱，据说不会出现在迷宫里。</p>
-    <p>奥克本身并不稀奇，但出现在迷宫中的是成体的Oku，幼体的Oku是从迷宫溢出的Oku制作孩子的事以外不能见到。</p>
+    <p>下一道菜是用烤箱烤成圆形的烤面包赫尔克尔烤成豪华的烤箱，据说不会出现在迷宫里。</p>
+    <p>猪人本身并不稀奇，但出现在迷宫中的是成体的猪人，幼体的猪人是从迷宫溢出的猪人制作孩子的事以外不能见到。</p>
     <p>所以贵重无比，首先是平民买不到的高级食材。</p>
     <p>将柔软的橡皮蛋白切成小块，浇上酸味调味汁。</p>
     <p>表面烤得火辣辣的，里面软得惊人。</p>
@@ -91,10 +91,10 @@
     <p>「那你就是。什么时候才能公布菲利克斯是正当的继承人呢？”</p>
     <p>“我在吃饭呢”</p>
     <p>“请不要放松！适可而止，请大家在看的这个场合承认，菲利克斯才是继承人！”</p>
-    <p>梅赛德斯专注于味道，威尔保加夫人开始向伯恩哈特呼唤什么。</p>
+    <p>梅赛德斯专注于味道，瓦尔堡加夫人开始向伯恩哈特呼唤什么。</p>
     <p>看来伯恩哈特还没有正式宣布菲利克斯是继承人。</p>
     <p>虽然夫人对此感到不满，但特意在这里这么说，是相当无神经还是自私……说没有富余吗……。</p>
-    <p>周围的夫人也除了琉迪亚以外全体人员用厌恶的视线看着varuburuga。</p>
+    <p>周围的夫人也除了琉迪亚以外全体人员用厌恶的视线看着瓦尔堡加。</p>
     <p>“你不是也赞成菲利克斯继承人吗？”</p>
     <p>“因为没有其他候选人了。但是情况发生了变化”</p>
     <p>“什么改变了！菲利克斯作为你的继承人，拥有相应的教养和实力，也取得了好成绩！除了那个孩子以外还有其他候选人吗！”</p>
@@ -108,17 +108,17 @@
     <p>这里最可怜的是男兄弟却完全被忽略的戈特弗里特。</p>
     <p>但本人却默默地吃着料理，没有听别人说话。</p>
     <p>“嗯。别人怎么想？</p>
-    <p>“我赞成保罗夫人。如果没有男孩的话姑且不论，这所房子里有一个名叫菲利克斯大哥的优秀长子，能力上也不足。</p>
+    <p>“我赞成瓦尔堡加夫人。如果没有男孩的话姑且不论，这所房子里有一个名叫菲利克斯大哥的优秀长子，能力上也不会有什么不足。</p>
     <p>那么应该让哥哥继承家业。传统和规矩在贵族社会中受到重视。如果没有意义的破坏，家名就会受伤吧。必须遵守有规格的传统”</p>
     <p>梅赛德斯赞同夫人的意见，将家督强加给菲利克斯。</p>
     <p>自己是女人，在贵族社会中，女人继承家督，是违背传统的，存在着令人感激的缺点。</p>
     <p>那么，没有办法不主张这个了。</p>
     <p>必须遵守有规格的传统……这是连有名的某小说的旁若无人被知道的邪恶的帝王也遵守的事。</p>
     <p>“嘛，我也是，梅尔这么说的话就没意见了。菲利克斯不是很好吗？</p>
-    <p>这个孩子，即使没有家督之类继承也快要能行了。</p>
-    <p>啊，但是这种情况下连梅尔一起从宅邸里消失了”</p>
+    <p>这个孩子，就算没有继承家业也能继续下去。</p>
+    <p>啊，但是这种情况下舒夫要和梅尔一起从宅邸里消失了”</p>
     <p>琉迪亚好像也赞成菲利克斯的继承人。</p>
-    <p>不过，这只是姑娘赞成而已的适当赞同。</p>
+    <p>不过，这只是因为女儿赞成而已的适当赞同。</p>
     <p>但是其他……特别是戈特弗里特的母亲坚决反对，在这里出现了菲利克斯派和反对派。</p>
     <p>问题是作为最对抗的马的梅赛德斯自己进入了菲利克斯派的事吗？</p>
 </body>
