--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -11,10 +11,10 @@
 
 <body>
     <h1>54. 那个迷宫的主人</h1>
-    <p>“咕噜咕噜！告诉你一个好事吧！</p>
+    <p>“噗噜噗噜！告诉你一个好事吧！</p>
     <p>在迷宫中出现的魔物所装备的武器是可以夺走的！没有钱买装备的时候很方便！</p>
     <p>说了废话！去死吧！”</p>
-    <p>“普鲁普尔！”</p>
+    <p>“噗噜噗噜！”</p>
     <p>在迷宫中出现的魔物果冻一击打飞了。</p>
     <p>虽然是像两足行走的老鼠一样的魔物，但不是果冻的敌人。</p>
     <p>这是进入这里之后反复出现的景象。</p>
@@ -25,7 +25,7 @@
     <p>虽然有时会陷入圈套，但都是对致命伤造成相当轻的伤害。</p>
     <p>说起来有圈套也是很奇怪的事情。这个迷宫里频繁地装有saker，每次被解除或者被破坏，或者发动。</p>
     <p>可是如果考虑为何圈套残留着，只有谁再设置着这样的回答以外到达。</p>
-    <p>“齐维尔夫、迷宫除了魔物以外，还会自动设置陷阱吗？”</p>
+    <p>“zwölf、迷宫除了魔物以外，还会自动设置陷阱吗？”</p>
     <p>“不，主人。像我们这样的迷宫管理者在预先配置的魔物和设备丢失的时候补充那个，积分的话重新量产魔物,不过，不重新设置没有的东西。我们进行补充……只是维持现状”</p>
     <p>“反过来说，如果从一开始就有陷阱来补充？”</p>
     <p>“好的。有的话就那么办”</p>
@@ -52,15 +52,15 @@
     <p>并且舒夫很快地解体死去的魔物也是约定。</p>
     <p>果然很弱。简单地，什么辛苦也没有连续不断下来的事能。</p>
     <p>这么简单的话，就让人怀疑是什么陷阱了。</p>
-    <p>“本凯，施夫。你觉得这个迷宫怎么样？</p>
+    <p>“本凯，舒夫。你觉得这个迷宫怎么样？</p>
     <p>“我觉得是没有反应的迷宫。出来的魔物只有杂兵”</p>
     <p>梅赛德斯决定听取本凯和舒夫的意见。</p>
     <p>假设是从迷宫中诞生的他们，期待能提出比自己更有意义的意见。</p>
     <p>对此，本凯说出了与梅赛德斯大致相同的感想。</p>
     <p>「不是，主啊。这是一个很棒的地牢。没有一个能使出来的魔物，以及长在这儿一棵草都不能使用的东西”</p>
-    <p>“喂，施夫，这对你来说是件好事吧。主人要求的意见是……”</p>
+    <p>“喂，舒夫，这对你来说是件好事吧。主人要求的意见是……”</p>
     <p>“等一下，本凯”</p>
-    <p>施夫仍旧说些奇怪的话，本凯惊讶地遮住了话语。</p>
+    <p>舒夫仍旧说些奇怪的话，本凯惊讶地遮住了话语。</p>
     <p>但是，梅赛德斯好像被什么牵连着，阻止了本凯。</p>
     <p>这是……意外，不是重要的事吗？我是这样想的。</p>
     <p>“继续吧，舒夫”</p>
