--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -11,12 +11,12 @@
 
 <body>
     <h1>55. 武艺祭</h1>
-    <p>虽然梅赛德斯在捕获几只奥克的同时好不容易到达了十五层，但仍然没有门。</p>
+    <p>虽然梅赛德斯在捕获几只猪人的同时好不容易到达了十五层，但仍然没有门。</p>
     <p>取而代之的是3米大小的巨大蜥蜴……不，是龙。</p>
     <p>稍稍驼背以二足步行站立，全身绿色的鳞被覆盖。</p>
     <p>从龙的角度来考虑的话，应该是相当小型的吧。</p>
     <p>“当地识别名，小龙。</p>
-    <p>龙种中属于弱部类，但是拥有咬断大树的咬肌力和使大树成为可能的牙齿，如果是Oku程度的话可以两断的爪子，全身的鳞片如果只是铁剑程度的话会反弹，从口中吐出1000℃的火焰。</p>
+    <p>龙种中属于弱部类，但是拥有咬断大树的咬肌力和使大树成为可能的牙齿，如果是猪人程度的话可以两断的爪子，全身的鳞片如果只是铁剑程度的话会反弹，从口中吐出1000℃的火焰。</p>
     <p>对于初学者来说可以说是比较严厉的对手吧”</p>
     <p>“嗯……话说回来，名字好像和奥尔克斯这边的语言体系有些不同？”</p>
     <p>“要推测的话，最初发现并命名的不是吸血鬼以外的种族吗？”</p>
