--- a/OEBPS/Text/c060.xhtml
+++ b/OEBPS/Text/c060.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>60.  年轻人与老人</h1>
+    <h1>60. 年轻人与老人</h1>
     <p>面对着白色的装束，菲利克斯藏着吉克林德走到了前面。</p>
     <p>如果只是偶然路过的话也没关系。只是就这样擦肩而过。</p>
     <p>但是白衣们明显地以这边作为目标前进着，不认为平稳结束。</p>
@@ -120,13 +120,13 @@
     <p>只是在装傻，还是故意明确地做呢……我不知道那个。</p>
     <p>也许也有人认为“校长不可能帮助敌人”。</p>
     <p>菲利克斯是一个认真的男人。并且，因为认真不能下决心。</p>
-    <p>只“有可能不是敌人”，就不能采取强行排除通货紧缩的选择。</p>
+    <p>只“有可能不是敌人”，就不能采取强行排除弗里德里克的选择。</p>
     <p>如果在这里的是梅赛德斯或者伯恩哈特，就不会被这样的老人纠缠所迷惑。</p>
     <p>无关是否恶意，以“妨碍”为理由进行攻击并将其击溃。</p>
     <p>是敌人还是朋友，这些都是些细小的问题，如果真的作为现实问题来妨碍我们的话，那已经是朋友，也是名为‘无能的伙伴’的敌人了。</p>
     <p>菲利克斯没有做出那个决定。</p>
     <p>因为他本质上很认真，而且很有良知，是个认真的男人。</p>
-    <p>判断力并不差。头也某种程度断，内心已经想通货紧缩与敌人联手的可能性。</p>
+    <p>判断力并不差。头也某种程度断，内心已经想弗里德里克与敌人联手的可能性。</p>
     <p>但是“也许只是真的装傻而已”。“或许是出于某种策略才演的吧”，他这样想着。</p>
     <p>而这正是他致命的弱点。</p>
     <p>“……蓝色的。时间到了，菲利克斯。</p>
