--- a/OEBPS/Text/c063.xhtml
+++ b/OEBPS/Text/c063.xhtml
@@ -10,134 +10,134 @@
 </head>
 
 <body>
-    <h1>63. 女帝ベアトリクス</h1>
-    <p>　フェリックス達を乗せた馬車は国境を越え、途中で兵士達と合流してベアトリクス帝国首都へと到着していた。</p>
-    <p>　白装束は最初、フェリックスを降ろす気でいたがその暇はもうない。</p>
-    <p>　周囲は完全に兵士に囲まれ、今そんな事をすれば白装束の方こそ裏切り者として処分されてしまうだろう。</p>
-    <p>　許せ坊主……俺も自分の命が惜しい。</p>
-    <p>　内心でそう詫びながら白装束隊長は馬車を進ませる。</p>
-    <p>　やがて城の前に到着し、馬車を停止させた。</p>
-    <p>「出ろ、ジークリンデ王女」</p>
-    <p>　兵士達を纏める兵士長が馬車へと声をかけた。</p>
-    <p>　この国の兵士は全員が女性で構成され、神聖な色とされる黒の鎧に身を包んでいる。</p>
-    <p>　吸血鬼にとって黒は夜の色で神聖なものとされ、逆に白は忌まわしき朝の色としていいイメージを持たれない。</p>
-    <p>　そんな白装束を、それこそ目立ちすぎる夜に着る事を強要されている事からもこの国の男の立場の低さが分かるというものだ。</p>
-    <p>　その長を務める女性は血のように赤い髪を腰までなびかせた凛々しい女性だ。名をローゼという。</p>
-    <p>　目鼻立ちはすっと整い、身体の均整も取れている。</p>
-    <p>　その立ち振る舞いからは高貴さが伺え、オーク以外にならば無双してくれそうな頼もしさがあった。</p>
-    <p>　彼女はジークリンデを閉じ込めていた部屋のドアを開き、中を見る。</p>
-    <p>　そこには報告通りに白銀の髪の少女がいる。</p>
-    <p>　何だか聞いていたより小さい気もするが、まあ１２歳ならばこんなものだろう。</p>
-    <p>　そしてその隣には金髪の――中性的だが美しい少女が顔を俯かせて座っていた。</p>
-    <p>「ふむ。王女と……もう一人いるな。こちらの娘は？」</p>
-    <p>（あっるええええ！？　あれ、確かに男だったよな！？　あれえ、俺見間違えてた！？）</p>
-    <p>　白装束隊長は混乱していた。</p>
-    <p>　自分が捕まえた時は確かに男だったはずだ。うん、間違いなく男だった。</p>
-    <p>　しかし今現実に見えているのは女である。</p>
-    <p>　確かに顔立ちは元々中性的だったと思うが、それでも男と女を見間違えるほどボケたつもりはない。</p>
-    <p>「そ、その者は……王女を捕まえる際に邪魔をしてきた生徒です」</p>
-    <p>「ほう、なるほど、勇敢なのだな。うむ、敵国の者ではあるがその勇気は素晴らしい」</p>
-    <p>「それと……確か、男……だったはず……」</p>
-    <p>「貴様は馬鹿か！」</p>
-    <p>　ローゼは白装束隊長を怒鳴り、それから少女（？）を指さす。</p>
-    <p>「この可憐な少女のどこが男に見えるというのだ！　貴様の眼は節穴か！</p>
-    <p>いくら中性的とはいえ、男と間違えるなど、そんな無礼があるか！」</p>
-    <p>「い、いえ、その……失礼しました！」</p>
-    <p>　白装束隊長にも言い分はあるが、これ以上何を言っても言い訳としか取られないだろう。</p>
-    <p>　それを察した彼はこれ以上言及するのを諦めた。</p>
-    <p>　この国では男の発言力は低い。兵士長であるローゼが黒と言えば黒で、自分達にそれを覆す事は出来ないのだ。</p>
-    <p>　事実、今も他の兵士達から軽蔑の眼差しを向けられている。</p>
-    <p>　かつて白装束が使い捨てにされていた事からも分かるように彼等の命は安い。</p>
-    <p>　それこそ、ローゼがこの場で彼等を斬り捨てても無罪放免されてしまうレベルの安さだ。</p>
-    <p>　なので白装束隊長は己の過ちを認めて謝罪する事でこの場を逃れるしかなかった。</p>
-    <p>「うむ、もう下がってよいぞ」</p>
-    <p>「はっ！」</p>
-    <p>　白装束達はすごすごと退散した。</p>
-    <p>　その背中が煤けているのはきっと気のせいではあるまい。</p>
-    <p>　ローゼは少女（？）へ微笑み、安心させるように言う。</p>
-    <p>「そう恐れる事はない、勇敢な娘よ。我等は勇気ある者を尊敬する。</p>
-    <p>すぐに国に帰してやるわけにはいかんが……その代わり、手荒い真似はしないと約束しよう」</p>
-    <p>　俯いている娘が恐怖で震えていると思い、ローゼは優しく語り掛ける。</p>
-    <p>　しかし彼女には誤解があった。</p>
-    <p>　少女（？）は恐怖で震えているのではない。</p>
-    <p>　……羞恥で震えているのだ。</p>
-    <p>　遡る事数時間。</p>
-    <p>　フェリックスを逃がすタイミングを見失ってしまったハンナは小声で宣言した。</p>
-    <p>「こうなったらプランBだよ、フェリックス君」</p>
+    <h1>63. 女帝贝亚特里克斯</h1>
+    <p>乘坐了菲利克斯他们的马车越过国境，途中与士兵们汇合到达了贝尔特里克斯帝国首都。</p>
+    <p>白衣最初是想卸下菲利克斯的，但是已经没有那个时间了。</p>
+    <p>周围的人完全被士兵包围着，如果现在这样做的话，穿白色衣服的人才会被当做叛徒来处理吧。</p>
+    <p>許せ坊主……俺も自分の命が惜しい。</p>
+    <p>在内心如此谢罪的同时，白装束的队长让马车前进。</p>
+    <p>不久就到了城前，让马车停了下来。</p>
+    <p>「出来吧，吉克林德公主」</p>
+    <p>统领着士兵们的士兵长向马车打招呼。</p>
+    <p>这个国家的士兵全部由女性构成、身穿神圣色的黑色铠甲。</p>
+    <p>对吸血鬼来说，黑色是夜晚的颜色，被视为神圣的东西，相反，白色作为不吉利的早晨的颜色，没有好的印象。</p>
+    <p>那样的白衣、也正是因为被强行要求在过于显眼的夜晚穿衣服，所以也能看出这个国家男人立场的低下。。</p>
+    <p>担任这个长的女性是一个像血一样红头发缠到腰部的凛凛女性。名为萝世。</p>
+    <p>五官端正，身体也很匀称。</p>
+    <p>その立ち振る舞いからは高貴さが伺え、オーク以外にならば無双してくれそうな頼もしさがあった。</p>
+    <p>她打开了关着吉克林德的房间的门，向里面看。</p>
+    <p>那里正如报告所说有一位白银头发的少女。</p>
+    <p>总觉得比听的要小，不过12岁的话就是这样吧。</p>
+    <p>然后旁边坐着一位金发的中性美少女。</p>
+    <p>「嗯。公主和……已经有一个人了。这位女性呢？」</p>
+    <p>（有啊是啊！？咦，确实是个男的吧！？咦，我看错了！？）</p>
+    <p>白装束队长很混乱。</p>
+    <p>自己抓到的时候确实是个男人。嗯，没错，他是个男人。</p>
+    <p>但是现在现实中看到的是女人。</p>
+    <p>確かに顔立ちは元々中性的だったと思うが、それでも男と女を見間違えるほどボケたつもりはない。</p>
+    <p>「那、那个人……是捕捉公主时做出妨碍行为的学生」</p>
+    <p>「嗬，原来如此，勇敢啊。嗯，虽然是敌国的人，但他的勇气非常棒」</p>
+    <p>「还有……确实，男人……应该是……」</p>
+    <p>「你是笨蛋吗！」</p>
+    <p>ローゼは白装束隊長を怒鳴り、それから少女（？）を指さす。</p>
+    <p>「这个可爱的少女哪里看起来像男人！你的眼睛瞎了吗！</p>
+    <p>就算再中性，会和男人搞错，真是太无礼了！」</p>
+    <p>「不，不，那个……对不起！」</p>
+    <p>白装束隊長にも言い分はあるが、これ以上何を言っても言い訳としか取られないだろう。</p>
+    <p>それを察した彼はこれ以上言及するのを諦めた。</p>
+    <p>この国では男の発言力は低い。兵士長であるローゼが黒と言えば黒で、自分達にそれを覆す事は出来ないのだ。</p>
+    <p>事实上，现在也被其他的士兵们投来了蔑视的目光。</p>
+    <p>从过去白色服装被一次性使用这件事也可以看出，他们的生命是很便宜的。</p>
+    <p>それこそ、ローゼがこの場で彼等を斬り捨てても無罪放免されてしまうレベルの安さだ。</p>
+    <p>なので白装束隊長は己の過ちを認めて謝罪する事でこの場を逃れるしかなかった。</p>
+    <p>「嗯，你可以下去了」</p>
+    <p>「是！」</p>
+    <p>白装束達はすごすごと退散した。</p>
+    <p>その背中が煤けているのはきっと気のせいではあるまい。</p>
+    <p>ローゼは少女（？）へ微笑み、安心させるように言う。</p>
+    <p>「不要害怕，勇敢的姑娘。我们尊敬有勇气的人。</p>
+    <p>不能让你马上回国……相应的，我们也不会粗暴对待你的」</p>
+    <p>俯いている娘が恐怖で震えていると思い、ローゼは優しく語り掛ける。</p>
+    <p>但是她误会了</p>
+    <p>少女（？）不是因为害怕而颤抖。</p>
+    <p>……因为羞耻而颤抖。</p>
+    <p>事情要回溯到几小时前</p>
+    <p>失去了让菲利克斯逃走的时机的汉娜小声地宣言了。</p>
+    <p>「变成这样的话计划B哟，菲利克斯君」</p>
     <p>「は、はあ……」</p>
-    <p>「あの人達も言ってたけど、このままじゃフェリックス君は向こうに着くと同時に処刑されてしまいます。</p>
-    <p>ベアトリクス帝国は女尊男卑なので野郎に人権がありません。</p>
-    <p>捕虜の扱いも滅茶苦茶で女の子なら丁重に扱うけど、男は捕虜扱いせずに殺します」</p>
-    <p>　ひどい国だ。</p>
-    <p>　フェリックスは本心からそう思った。</p>
-    <p>「なので、フェリックス君には女の子になってもらいます」</p>
-    <p>「…………はい？」</p>
-    <p>　ハンナが得意顔で何かおかしな言葉を口にしたが、フェリックスにはその意味がすぐに理解出来なかった。</p>
-    <p>　女の子？　誰が？　僕が？</p>
-    <p>　混乱する彼の前でハンナは何処からか化粧道具と裁縫道具を取り出し、フェリックスへ詰め寄る。</p>
-    <p>「私、前からフェリックス君は女装映えすると思ってたんだよね。</p>
-    <p>大丈夫大丈夫、私に任せなさい」</p>
-    <p>「え、あの、その……」</p>
-    <p>「さ、時間もないしとりあえず、ちゃちゃっと終わらせようか。</p>
-    <p>制服は男物のままだと疑われるから、そっちも改造しちゃおうね」</p>
-    <p>　それからハンナは嫌がるフェリックスから無理矢理服とズボンを剥ぎ取り、切ったり縫ったりして女物の服に改造してしまった。</p>
-    <p>　更に化粧を施し、驚くほど手慣れた様子でフェリックスを女装させる。</p>
-    <p>　かくして出来上がったのは、凛々しい顔立ちの誰もが振り返るような美しい少女であった。</p>
-    <p>　騎士の恰好をさせたらさぞ似合うだろう。</p>
-    <p>　女騎士ソムリエのオークも太鼓判を押す出来栄えであった。</p>
-    <p>　そして現在。フェリックスは謁見の間へと通されていた。</p>
-    <p>　無論妙な抵抗をしないように縛られているが、それが妙に扇情的だ。</p>
-    <p>　女兵士の何人かはフェリックスを見てほう、と息を吐いており嫌な悪寒が背中を駆け抜ける。</p>
-    <p>　屈辱であった。とんでもない恥辱であった。</p>
-    <p>　フェリックスはグリューネヴァルト家の長男である事に誇りを持っている。</p>
-    <p>　男として常に紳士たれと心がけている。</p>
-    <p>　しかし今の彼はどうだ。女性の恰好をさせられ、それを女性から眺められた挙句欲情を抱かれているではないか。</p>
-    <p>　何かもうフェリックスは泣きたい気持ちで一杯であった。</p>
-    <p>「お前がジークリンデ王女か。面を上げよ」</p>
-    <p>　この国の女帝であるベアトリクス１７世は桃色の髪を腰まで伸ばした女性であった。</p>
-    <p>　女にしては身長が高く、１８０はあるだろうか。</p>
-    <p>　瞳の色は青く、顔立ちに幼さは感じられない。</p>
-    <p>　目は鋭く、鼻は高く、幼さを完全に捨てた大人ならではの色香を放っている。</p>
-    <p>　胸元が大きく開いたドレスを着こなし、手には他国から取り寄せた扇を持っていた。</p>
-    <p>「このような真似をして……貴方達は何をしているのか分かっているのか！　これは国際問題だぞ！」</p>
-    <p>　ジークリンデに変装したハンナは、普段のぽやぽやした雰囲気を完全に捨ててジークリンデに成り切っていた。</p>
-    <p>　内心では国際問題を恐れるような奴はこんな事をそもそもやらないと理解しているし、これが愚問である事も承知している。</p>
-    <p>　しかしあえてハンナはその愚問を口にした。</p>
-    <p>　その方が現実をよく分かっていない十二歳の王女っぽいからだ。</p>
-    <p>「若いな、王女よ。無論承知の上だとも。</p>
-    <p>私はあの腐った国を叩き潰すつもりで事を起こしているのだ。</p>
-    <p>国際問題などという段階はとうに過ぎている」</p>
-    <p>（ま、腐ってるのは否定出来ないけどね）</p>
-    <p>　ベアトリクスの言葉は一部正論であった。</p>
-    <p>　オルクスは確かに腐っている。それは暗部に生きるハンナだからこそ同意出来る内容だ。</p>
-    <p>　国の上層部はどいつもこいつも汚職塗れ。</p>
-    <p>　先代の王は他者を見る目の無い阿呆で、既に処刑された今代は売国奴。</p>
-    <p>　ジークリンデはまっとうな性格をしているが、まっとうすぎて先代と同じ道に入りかねない。</p>
-    <p>　これで帝国が偏った女尊男卑でさえなければ、あるいは統一もよかったかもしれないとすら考えている。</p>
-    <p>　去年の一掃で少しはマシになったが、それでもまだまだ膿は出続ける。</p>
-    <p>　その点で言えばベアトリクスは有能だ。</p>
-    <p>　ダンジョンを後ろ盾に上下社会を築き、自身の息がかかった者だけで国を機能させている。</p>
-    <p>　民主制は腐った君主による独裁を防ぎ、それが長く居座る事を阻止出来るが反面、民が無能では同レベルのトップしか生まれない。</p>
-    <p>　平等と言えば聞こえはいいが、方向性の統一が出来ずに迷走し続ける。</p>
-    <p>　君主制は意思の統一を図り、目的へ最短で進む事が出来る。</p>
-    <p>　だが君主が無能だった時、国は一気に瓦解してしまう。</p>
-    <p>　逆に言えば君主が有能ならば君主制は民主制に勝るだろう。</p>
-    <p>　ならばその君主制で帝国を纏めている彼女は、紛れもない有能だという事になる。</p>
-    <p>　ただし――その思想を除いて。</p>
-    <p>「ところでそちらの娘……どうだ？　私の愛人にならんか？　可愛がってやるぞ」</p>
-    <p>「ふ、ふざけるな！」</p>
-    <p>「そう怯える事はない、私はテクニシャンだ。天国に連れて行ってやるぞ」</p>
-    <p>「冗談じゃない！　そんな屈辱を受けるくらいなら死を選ぶ！」</p>
-    <p>「ふふふ、愛い奴め。その頑なな心を溶かすのも一興よ」</p>
-    <p>　ハンナはげんなりし、呆れたような視線をベアトリクスへ向けた。</p>
-    <p>　ベアトリクスは獲物を品定めするように舌なめずりをし、フェリックスを凝視している。</p>
-    <p>　悲しい事にフェリックスは彼女のお眼鏡に適ってしまったらしい。</p>
-    <p>（うわあガチだあ……この人ガチだよう）</p>
-    <p>　ハンナは、梅赛德斯が早くウサちゃんと合流して救助隊がこちらに来る事を強く願った。</p>
-    <p>　これは思っていたよりも時間がないかもしれない。</p>
-    <p>　具体的にはフェリックスの貞操的な意味で。</p>
-    <p>　とにかく今は、フェリックスが【くっ殺せ！】されてしまう前に助けが来るのを願うばかりだ。</p>
-    <p>　最悪の場合は、調査出来なくなるのを覚悟の上で自分がフェリックスを連れて逃げるしかない。</p>
+    <p>「那些人也说过，这样的话菲利克斯君到了对面的时候就会被处刑。</p>
+    <p>因为贝尔特里克斯帝国是女尊女卑，所以男人没有人权。</p>
+    <p>对待俘虏也是乱七八糟，如果是女孩子的话会很礼貌地对待，但是男人不会被当做俘虏杀掉」</p>
+    <p>真是过分的国家呢。</p>
+    <p>菲利克斯是真心这么想的。</p>
+    <p>「所以、得让菲利克斯君变成女孩子呢」</p>
+    <p>「…………哈？」</p>
+    <p>汉娜得意地说了一些奇怪的话，菲利克斯却不能马上理解其意思。</p>
+    <p>女孩子？谁啊？我吗？</p>
+    <p>在混乱的他面前，汉娜不知从哪里拿出了化妆道具和针线道具，逼近菲利克斯。</p>
+    <p>「我以前就觉得菲利克斯君很适合穿女装呢。</p>
+    <p>没关系，交给我吧」</p>
+    <p>「额，那个，那个……」</p>
+    <p>「那么，也没有时间了，总之先快点结束吧。</p>
+    <p>制服会被怀疑是男式的，所以那边也要进行改造啊」</p>
+    <p>然后汉娜强行从讨厌的菲利克斯身上剥下衣服和裤子，剪和缝成了女式衣服。</p>
+    <p>再加上化妆，让菲利克斯穿上女装的样子让人吃惊。</p>
+    <p>这样做出来的，是一个拥有凛凛脸庞的谁都会回头看的美丽少女。</p>
+    <p>打扮成骑士的样子一定很合适吧。</p>
+    <p>女騎士ソムリエのオークも太鼓判を押す出来栄えであった。</p>
+    <p>然后现在。菲利克斯被带到了谒见之间。</p>
+    <p>当然，为了不产生奇怪的抵抗而被束缚着，但这却奇妙地带有煽动性。</p>
+    <p>有几个女士兵看着菲利克斯，吐着气，讨厌的恶寒从背后跑过去。</p>
+    <p>是屈辱。真是岂有此理的耻辱。</p>
+    <p>菲利克斯为自己是格鲁内瓦特家的长子而自豪。</p>
+    <p>作为一个男人，经常注意要成为一个绅士。</p>
+    <p>他现在怎么样了。被女人打扮得很帅，在女性看来，不正是因为有欲望吗。</p>
+    <p>菲利克斯已经充满了想哭的心情。</p>
+    <p>「你是吉克林德公主吗。抬起头来」</p>
+    <p>作为这个国家的女帝的贝亚特里克斯十七世是一位将桃色头发直直直腰的女性。</p>
+    <p>对女人来说身高很高，有180吧。</p>
+    <p>瞳孔的颜色是蓝色的、脸上感觉不到稚气。</p>
+    <p>眼睛锐利，鼻子高，散发着完全舍弃稚气的大人特有的色香。</p>
+    <p>穿着胸口敞开的礼服，手里拿着从其他国家送来的扇子。</p>
+    <p>「做出这样的模仿……你们知道你们在干什么吗！这是国际问题！」</p>
+    <p>乔装成吉克林德的汉娜完全抛弃了平时丰满的气氛，完全变成了吉克林德。</p>
+    <p>内心害怕国际问题的人本来就知道这样的事情不会做，也知道这是愚蠢的问题。</p>
+    <p>但是汉娜却敢于提出这个愚蠢的问题。</p>
+    <p>因为她更像是不太了解现实的十二岁公主。</p>
+    <p>「年轻啊，公主。当然知道了。</p>
+    <p>我是打算击溃那个腐败的国家而引发的。</p>
+    <p>国际问题等阶段早已过了」</p>
+    <p>（嘛，虽然不能否定腐烂了）</p>
+    <p>贝尔特里克斯的话有一部分是正确的。</p>
+    <p>オルクスは確かに腐っている。それは暗部に生きるハンナだからこそ同意出来る内容だ。</p>
+    <p>这个国家的上层总是在贪污。</p>
+    <p>上一代的王是个对他人没有眼光的傻瓜，已经被处死的今代是卖国奴。</p>
+    <p>吉克林德虽然性格很正经，但过于认真很有可能会和上一代走上同一条路。</p>
+    <p>甚至有人认为，只要帝国没有偏颇的女尊女卑，或许统一也不错。</p>
+    <p>去年扫除后稍微好了一点，但即便如此，脓还是继续冒出来。</p>
+    <p>以这点而言贝亚特里克斯是有能力的</p>
+    <p>ダンジョンを後ろ盾に上下社会を築き、自身の息がかかった者だけで国を機能させている。</p>
+    <p>民主制度可以防止腐败君主的独裁统治，虽然可以阻止长期居住，但另一方面，国民无能的话只能产生同一级别的领导人。</p>
+    <p>说到平等，听起来倒是不错，但方向性无法统一，一直在迷茫中。</p>
+    <p>君主制谋求意思的统一，能以最短的速度向目的前进。</p>
+    <p>但是君主无能的时候，国家一下子瓦解了。</p>
+    <p>反过来说，如果君主有能力的话，君主制会胜过民主制吧。</p>
+    <p>如果是这样的话，用君主制来统治帝国的她，毫无疑问是很有能力的。</p>
+    <p>但是——除了那个思想。</p>
+    <p>「话说回来那边的女孩……怎么样？不能成为我的爱人吗？我会疼爱你的」</p>
+    <p>「别，别开玩笑了！」</p>
+    <p>「没必要那么害怕，我技术很好呢。可以让你爽上天哦」</p>
+    <p>「别开玩笑了！与其受那样的屈辱还不如选择死亡！」</p>
+    <p>「呋呋呋，可爱的小家伙。让这样顽固的心溶化也是一种乐趣呐」</p>
+    <p>汉娜紧张起来，目瞪口呆地把视线转向了贝亚特里克斯</p>
+    <p>贝亚特里克斯为了评定猎物的质量而咂嘴，凝视着菲利克斯。</p>
+    <p>可悲的是菲利克斯好像适合她的眼镜。</p>
+    <p>（哇，真是的……这个人真格）</p>
+    <p>汉娜强烈希望梅赛德斯能早点和乌萨会合，让救助队早点到这里。</p>
+    <p>这个可能没有想象中的时间。</p>
+    <p>具体来说是指菲利克斯的贞操。</p>
+    <p>总之现在、只希望能在菲利克斯做出“咕杀”之前获得救助。</p>
+    <p>最坏的情况下，只有做好不能调查的觉悟，自己带着菲利克斯逃走。</p>
     <p>オーク「一目見てビビッときましたね、ええ。</p>
     <p>私はこれでも女騎士ソムリエを始めて２０年ほど経ちますが、あれほどに【くっ殺せ！】が似合いそうな娘はそういません。</p>
     <p>あれで男というのが残念です」</p>
