--- a/OEBPS/Text/c064.xhtml
+++ b/OEBPS/Text/c064.xhtml
@@ -135,7 +135,7 @@
     <p>“……别小看我……”</p>
     <p>“诶”</p>
     <p>“把我……别小看我！”</p>
-    <p>通货紧缩站立在颤抖的脚上。</p>
+    <p>弗里德里克站立在颤抖的脚上。</p>
     <p>腰疼，腿颤动，只是站立这样的行为也使用体力。</p>
     <p>尽管如此，我只是讨厌就这样趴着。</p>
     <p>没有这样的屈辱。</p>
@@ -160,5 +160,5 @@
     <p>但是神童又阻挡在他面前。</p>
     <p>格鲁内瓦特这个名字的忌讳的墙壁无论几次都打碎他的命运。</p>
     <p>梅赛德斯·格鲁内瓦特……同时具备汉娜的素质和伯恩哈特的冷酷，宛如噩梦般的神童。</p>
-    <p>总有一天它会来破坏自己的归宿……通货紧缩，是那样预感。</p>
+    <p>总有一天它会来破坏自己的归宿……弗里德里克，是那样预感。</p>
 </body>
