--- a/OEBPS/Text/c066.xhtml
+++ b/OEBPS/Text/c066.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>66.  没办法</h1>
+    <h1>66. 没办法</h1>
     <p>在弗雷德里克提到私下交易的事，还是在吉克林德正式被发现是公主之前的事之前。</p>
     <p>先前的无能之王——伊扎克说。</p>
     <p>作为自己的孩子影武者让一个女儿入学。那个姑娘会被敌国的人处理掉，校方却什么都不做……对于那个要求，弗雷德里克摇了摇头。</p>
@@ -21,11 +21,11 @@
     <p>影武者如果作为影武者完成了作为影武者的作用而死的话，那是光荣的事情。</p>
     <p>虽然有想要保护学生的心情，但确实不是应该勉强守护的存在。</p>
     <p>当时，我只考虑到那个程度。</p>
-    <p>虽然通货紧缩是内行者，但不是国家的敌人。</p>
+    <p>虽然弗里德里克是内行者，但不是国家的敌人。</p>
     <p>但是由于吉克林登的真面目被揭露，事态一下子变得复杂了。</p>
     <p>伊扎克王是只坐在宝座上的卖国奴，而且在其背后还有贝亚特里克斯帝国。</p>
     <p>伊扎克下台后，女帝贝阿朵里克斯试图与伊扎克接触，不用说，就是弗雷德里克。</p>
-    <p>她通过使者命令通货紧缩。“协助诱拐公主”。</p>
+    <p>她通过使者命令弗里德里克。“协助诱拐公主”。</p>
     <p>这很明显是出卖国家的行为，是背叛王家的行为。</p>
     <p>事情暴露出来就不能平安无事。不是象到现在一样的『冷酷王家协助着』的状况。</p>
     <p>那么，弗雷德里克应该拒绝这个。</p>
