--- a/OEBPS/Text/c067.xhtml
+++ b/OEBPS/Text/c067.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>67.  过于丰富的遗物</h1>
+    <h1>67. 过于丰富的遗物</h1>
     <p>弗雷德里克用冷淡的眼光看着想要打到校长室的梅赛德斯。</p>
     <p>恐怕从一开始就在房间外待机吧。</p>
     <p>首先，通过展示吉克林德来发布信息，然后再进入……原来如此，这手不错。</p>
@@ -107,7 +107,7 @@
     <p>既然如此，他已经不能再当校长了。</p>
     <p>这个学园的学生中，贵族和商人的孩子也很多。如果这样的话，接下来他只会受到来自他们父母、从他们的父母到佣人及其他贵族的恶评。</p>
     <p>“……啊……”</p>
-    <p>通货紧缩颤抖着，发出了绞痛般的声音。</p>
+    <p>弗里德里克颤抖着，发出了绞痛般的声音。</p>
     <p>感到这不寻常的东西的吉克林德向后退一步，梅赛德斯反而向前走了一步。</p>
     <p>“夺走了啊……我的……把我唯一的归宿。我的全部……”</p>
     <p>一边像诅咒般咕嘟咕嘟地吐出话语，一边将手伸进口袋。</p>
