--- a/OEBPS/Text/c072.xhtml
+++ b/OEBPS/Text/c072.xhtml
@@ -12,78 +12,78 @@
 <body>
     <h1>72. 女騎士にはオークが強い</h1>
 
-    <p>　抗議文を送る使者という名分で帝国へやって来た梅赛德斯であったが実の所、真正面から乗り込んで文を渡す気など最初からなかった。</p>
-    <p>　ここまでの行動を見るに向こうは明らかにこちらに喧嘩を売るつもりで事に及んでいるし、王女にまで手を出している以上は戦争すら織り込み済みだろう。</p>
-    <p>　戦争一歩手前、どころの話ではない。軍事衝突をしていないだけで既に始まっている。</p>
-    <p>　そんな相手が抗議文一つで止まるはずなどなく、こんな紙切れ一つで戦争を止める事が出来るならば世界はもっと平和だっただろう。</p>
-    <p>　梅赛德斯がノコノコ出向いたところで、その場で捕まるか処刑されるかで終わりだ。まずロクな事にはならない。</p>
-    <p>　ならば取るべき手段は正攻法に非ず。無法には無法をもって返すのみだ。</p>
-    <p>　しかし相手は国だ。下手を打てばこちらも無事では済まないだろう。</p>
-    <p>　一番いいのは誰にも見付からずに潜入してハンナとフェリックスを救い出して脱出する事だが、そんな隠密スキルは梅赛德斯にはない。</p>
-    <p>　伝説の潜入用アイテムであるダンボールがあったとしても達成はまず不可能だろう。</p>
-    <p>　なので、秘密裏に入り込むという手段は選ばない。</p>
-    <p>　むしろその逆……いっそ、事を大きくしてしまおうと梅赛德斯は考えていた。</p>
-    <p>　派手な囮を用意して突撃させ、城と町を混乱させる。</p>
-    <p>　その上でどさくさ紛れにフェリックス達を救出するのだ。</p>
-    <p>　幸いに、それに役立つ物はこちらにある。</p>
-    <p>　梅赛德斯はまず、ダンジョンに意識を向けてある魔物を量産させた。</p>
-    <p>　今回使う魔物の名は『キョセイズミ・オーク』といい、薄い本でお馴染みの歩く豚さんだ。</p>
-    <p>　ただし、この種は扱いやすくする為に去勢されてしまったオークらしく、通常のオークに比べると若干戦闘力に欠けるという欠点があった。</p>
-    <p>　正確には身体能力そのものは変化していないのだが、性欲がなくなった事で闘争心が薄れ、それで弱体化しているらしい。</p>
-    <p>　梅赛德斯はとりあえず、これを百体ほど量産してダンジョン内で待機させておいた。</p>
-    <p>　ここまで言えば分かるだろうが、今回囮となるのはオーク×１００だ。</p>
-    <p>　女騎士に対抗するのはオークと、古今東西決まっているのだ。</p>
-    <p>　とはいえ、オークが本当に強姦をしてしまっては、さしもの梅赛德斯でも後味の悪さ一つくらいは感じるものだ。</p>
-    <p>　なので、あえてキョセイズミ・オークを選択した。これならば万一にも本番行為に及んでしまう事はない。</p>
+    <p>抗議文を送る使者という名分で帝国へやって来た梅赛德斯であったが実の所、真正面から乗り込んで文を渡す気など最初からなかった。</p>
+    <p>ここまでの行動を見るに向こうは明らかにこちらに喧嘩を売るつもりで事に及んでいるし、王女にまで手を出している以上は戦争すら織り込み済みだろう。</p>
+    <p>戦争一歩手前、どころの話ではない。軍事衝突をしていないだけで既に始まっている。</p>
+    <p>そんな相手が抗議文一つで止まるはずなどなく、こんな紙切れ一つで戦争を止める事が出来るならば世界はもっと平和だっただろう。</p>
+    <p>梅赛德斯がノコノコ出向いたところで、その場で捕まるか処刑されるかで終わりだ。まずロクな事にはならない。</p>
+    <p>ならば取るべき手段は正攻法に非ず。無法には無法をもって返すのみだ。</p>
+    <p>しかし相手は国だ。下手を打てばこちらも無事では済まないだろう。</p>
+    <p>一番いいのは誰にも見付からずに潜入してハンナとフェリックスを救い出して脱出する事だが、そんな隠密スキルは梅赛德斯にはない。</p>
+    <p>伝説の潜入用アイテムであるダンボールがあったとしても達成はまず不可能だろう。</p>
+    <p>なので、秘密裏に入り込むという手段は選ばない。</p>
+    <p>むしろその逆……いっそ、事を大きくしてしまおうと梅赛德斯は考えていた。</p>
+    <p>派手な囮を用意して突撃させ、城と町を混乱させる。</p>
+    <p>その上でどさくさ紛れにフェリックス達を救出するのだ。</p>
+    <p>幸いに、それに役立つ物はこちらにある。</p>
+    <p>梅赛德斯はまず、ダンジョンに意識を向けてある魔物を量産させた。</p>
+    <p>今回使う魔物の名は『キョセイズミ・オーク』といい、薄い本でお馴染みの歩く豚さんだ。</p>
+    <p>ただし、この種は扱いやすくする為に去勢されてしまったオークらしく、通常のオークに比べると若干戦闘力に欠けるという欠点があった。</p>
+    <p>正確には身体能力そのものは変化していないのだが、性欲がなくなった事で闘争心が薄れ、それで弱体化しているらしい。</p>
+    <p>梅赛德斯はとりあえず、これを百体ほど量産してダンジョン内で待機させておいた。</p>
+    <p>ここまで言えば分かるだろうが、今回囮となるのはオーク×１００だ。</p>
+    <p>女騎士に対抗するのはオークと、古今東西決まっているのだ。</p>
+    <p>とはいえ、オークが本当に強姦をしてしまっては、さしもの梅赛德斯でも後味の悪さ一つくらいは感じるものだ。</p>
+    <p>なので、あえてキョセイズミ・オークを選択した。これならば万一にも本番行為に及んでしまう事はない。</p>
     <p>（さて……オークは正面から六十、裏から三十を突撃させるとして、残る十は適当に街中を徘徊させるか。そうすれば騎士の何人かは町に行かざるを得んだろう）</p>
-    <p>　相手は訓練された騎士だ。</p>
-    <p>　なので正面から馬鹿正直に突撃させればオークなどあっという間に全滅してしまい、囮にすらならない。</p>
-    <p>　ならば別動隊を入れて混乱させつつ、更に町の守りにも人員を裂かせよう。</p>
-    <p>　勿論町を徘徊するオークは、本当にただ散歩するだけだ。間違えても一般人を襲う事はないように念入りに命じておいた。</p>
+    <p>相手は訓練された騎士だ。</p>
+    <p>なので正面から馬鹿正直に突撃させればオークなどあっという間に全滅してしまい、囮にすらならない。</p>
+    <p>ならば別動隊を入れて混乱させつつ、更に町の守りにも人員を裂かせよう。</p>
+    <p>勿論町を徘徊するオークは、本当にただ散歩するだけだ。間違えても一般人を襲う事はないように念入りに命じておいた。</p>
     <p>「さて、やるか……」</p>
-    <p>　梅赛德斯がブルートアイゼンを振るうと、その場に百体のオークが出現した。</p>
-    <p>　それから梅赛德斯が走るのに合わせてオーク達も走り、一見すると少女がオークの群れに追われているようにしか見えないだろう。</p>
-    <p>　あまり演技は得意ではないのだが、と思いながら梅赛德斯は城の前にいた女性騎士へ助けを求めるように声をあげた。</p>
+    <p>梅赛德斯がブルートアイゼンを振るうと、その場に百体のオークが出現した。</p>
+    <p>それから梅赛德斯が走るのに合わせてオーク達も走り、一見すると少女がオークの群れに追われているようにしか見えないだろう。</p>
+    <p>あまり演技は得意ではないのだが、と思いながら梅赛德斯は城の前にいた女性騎士へ助けを求めるように声をあげた。</p>
     <p>「大変だ！　オークの群れが突然出てきて……た、助けてくれ！」</p>
-    <p>　梅赛德斯が取った方法。</p>
-    <p>　それは自らがオークに追われる被害者を装う事で保護され、城の中へと入りこむというものだ。</p>
-    <p>　こうすれば場の混乱もあって、騎士達は梅赛德斯を城へと入れてくれるだろう。</p>
-    <p>　もし見捨てられれば、その時はその時だ。別の方法を考えよう。</p>
+    <p>梅赛德斯が取った方法。</p>
+    <p>それは自らがオークに追われる被害者を装う事で保護され、城の中へと入りこむというものだ。</p>
+    <p>こうすれば場の混乱もあって、騎士達は梅赛德斯を城へと入れてくれるだろう。</p>
+    <p>もし見捨てられれば、その時はその時だ。別の方法を考えよう。</p>
     <p>「大変だ！　愛らしい少女が汚らわしい豚に追われている！」</p>
     <p>「何をしている、すぐに保護しろ！」</p>
     <p>「門番は何をやっていたの！　これだから男は！」</p>
-    <p>　しかし梅赛德斯の心配に反し、女騎士達はむしろこちらがドン引く勢いで助けに来てくれた。</p>
-    <p>　騎士達は見事な剣技でオークを切り伏せ、それから梅赛德斯の手を引いて城内へ引っ張り込んだ。</p>
+    <p>しかし梅赛德斯の心配に反し、女騎士達はむしろこちらがドン引く勢いで助けに来てくれた。</p>
+    <p>騎士達は見事な剣技でオークを切り伏せ、それから梅赛德斯の手を引いて城内へ引っ張り込んだ。</p>
     <p>「もう大丈夫だ少女よ、城の中に隠れていなさい！」</p>
     <p>「我等がいる限り、君に手は触れさせない！」</p>
     <p>「絶対オークなんかに負けない！」</p>
-    <p>　女騎士達はどこか芝居がかった口調と仕草で梅赛德斯を安心させるように言う。</p>
-    <p>　気のせいか背景には百合の花が咲き誇っているように見えた。</p>
-    <p>　友好的すぎて、流石に少しだけ騙している事に罪悪感が沸きそうになる。</p>
-    <p>　とはいえ、ともかくまずは第一歩目の成功だ。</p>
-    <p>　予想外に上手くいってしまい、難なく城へ入り込む事が出来た。</p>
-    <p>　騎士達は梅赛德斯を疑うそぶりもなく、オークと交戦している。</p>
+    <p>女騎士達はどこか芝居がかった口調と仕草で梅赛德斯を安心させるように言う。</p>
+    <p>気のせいか背景には百合の花が咲き誇っているように見えた。</p>
+    <p>友好的すぎて、流石に少しだけ騙している事に罪悪感が沸きそうになる。</p>
+    <p>とはいえ、ともかくまずは第一歩目の成功だ。</p>
+    <p>予想外に上手くいってしまい、難なく城へ入り込む事が出来た。</p>
+    <p>騎士達は梅赛德斯を疑うそぶりもなく、オークと交戦している。</p>
     <p>（大丈夫かこの国……いや、ともかく今は成功を喜ぶべきか。</p>
     <p>オーク達が全滅するのにそう時間はかからないはず……早いところ、目的を達成しなくてはな）</p>
-    <p>　梅赛德斯はこれで城に侵入出来たが、本番はここからだ。</p>
-    <p>　オークが全滅する前にフェリックス達を見付けて逃げなくてはならない。</p>
-    <p>　とりあえず、まず探すべきは地下だろうか。誰かを捕えておくならば地下牢というのは定番だ。</p>
-    <p>　そう考え、地下への階段を探して移動を開始した。</p>
+    <p>梅赛德斯はこれで城に侵入出来たが、本番はここからだ。</p>
+    <p>オークが全滅する前にフェリックス達を見付けて逃げなくてはならない。</p>
+    <p>とりあえず、まず探すべきは地下だろうか。誰かを捕えておくならば地下牢というのは定番だ。</p>
+    <p>そう考え、地下への階段を探して移動を開始した。</p>
     <p>*</p>
-    <p>　結論から言えば梅赛德斯が当たりを付けた地下牢にフェリックスとハンナはいなかった。</p>
-    <p>　彼らが軟禁されているのは地下どころか、むしろ二階にある来客用の豪華な部屋だったのだ。</p>
-    <p>　無論脱出出来ないように窓は外側から封鎖され、入り口前には常に騎士が立っているが生活そのものに不便は強いられていない。</p>
-    <p>　風呂やトイレも室内にあるし、食べ物もしっかりと栄養のあるものが一日三食おやつ付きで配給されている。</p>
-    <p>　女帝ベアトリクスは二人に対して決してぞんざいな扱いをせず、それどころか大事な来賓を扱うように丁寧に接していた。</p>
-    <p>　残念ながら梅赛德斯が向かっている地下牢にいるのは男囚人だけだ。</p>
+    <p>結論から言えば梅赛德斯が当たりを付けた地下牢にフェリックスとハンナはいなかった。</p>
+    <p>彼らが軟禁されているのは地下どころか、むしろ二階にある来客用の豪華な部屋だったのだ。</p>
+    <p>無論脱出出来ないように窓は外側から封鎖され、入り口前には常に騎士が立っているが生活そのものに不便は強いられていない。</p>
+    <p>風呂やトイレも室内にあるし、食べ物もしっかりと栄養のあるものが一日三食おやつ付きで配給されている。</p>
+    <p>女帝ベアトリクスは二人に対して決してぞんざいな扱いをせず、それどころか大事な来賓を扱うように丁寧に接していた。</p>
+    <p>残念ながら梅赛德斯が向かっている地下牢にいるのは男囚人だけだ。</p>
     <p>「何か、外が騒がしいですね」</p>
     <p>「…………」</p>
-    <p>　外の喧騒に違和感を感じたフェリックスが、やや緊張した声で言う。</p>
-    <p>　今の彼を見てフェリックスであると一目で見抜ける者は果たして何人いるだろうか。</p>
-    <p>　少なくとも梅赛德斯では判別出来ないだろう。</p>
-    <p>　それもそのはずで、今ここにいるのは豊かな金髪カツラを腰まで伸ばした、白いドレスの美しい少女野郎だったからだ。</p>
-    <p>　ドレスは女帝から渡されたものであるが、悲しい程によく似合っていた。</p>
-    <p>　最近はどこを歩くにも女騎士レズ達の熱い視線を受けて気分が悪い。</p>
+    <p>外の喧騒に違和感を感じたフェリックスが、やや緊張した声で言う。</p>
+    <p>今の彼を見てフェリックスであると一目で見抜ける者は果たして何人いるだろうか。</p>
+    <p>少なくとも梅赛德斯では判別出来ないだろう。</p>
+    <p>それもそのはずで、今ここにいるのは豊かな金髪カツラを腰まで伸ばした、白いドレスの美しい少女野郎だったからだ。</p>
+    <p>ドレスは女帝から渡されたものであるが、悲しい程によく似合っていた。</p>
+    <p>最近はどこを歩くにも女騎士レズ達の熱い視線を受けて気分が悪い。</p>
     <p>从平时开始，就绅士地约束自己不要对女性投以卑鄙的目光，但没想到自己竟然会被女性投以卑鄙的目光。</p>
     <p>菲利克斯男人的自尊心已经破烂不堪了。</p>
     <p>“难道，来了吗。”</p>
@@ -95,7 +95,7 @@
     <p>「哈。听说是橡子大群的袭击”</p>
     <p>“哦？到底是从哪里冒出来的呢？”</p>
     <p>“现在正在调查中。但是您不必担心，公主。</p>
-    <p>像Oku那样不可能到达这里，即使万一变成那样，我们也会保护你的”</p>
+    <p>像猪人那样不可能到达这里，即使万一变成那样，我们也会保护你的”</p>
     <p>汉娜思考着从门那边听到的回答。</p>
     <p>因为在被捕之前先把小兔子当成聊天工具留下来，所以已经知道自己的绑架和犯人很fredelic了吧。</p>
     <p>但是考虑到发生战争的危险等，很难认为军队马上行动。</p>
@@ -103,14 +103,14 @@
     <p>但是伯恩哈特不可能做那种事，那样的话军队就不会动了。</p>
     <p>如果在军队无法行动的情况下能够进行如此大规模袭击的人物，那也是有限的。</p>
     <p>更加这个国家被围墙，附近也没有橡子的住处。</p>
-    <p>如果因此突然Oku组成群出现了……。</p>
+    <p>如果因此突然猪人组成群出现了……。</p>
     <p>“……好。菲利克斯君，快逃吧」</p>
     <p>“诶？”</p>
     <p>“大概在做这个吧，是梅露啊。如果错过这个机会的话，你可能无法逃脱”</p>
     <p>汉娜有比较不留神的习惯，对意料之外的事态也容易引起恐慌基本上优秀。</p>
     <p>她的头脑一连串的流动已经用一条线连接着，看穿在前面的是规格外的侄女的事。</p>
     <p>那么现在正是好机会。趁着这个土包逃出去。</p>
-    <p>（从小梅鲁的性格来看……应该不会认为敌人会优待被捕的对手。</p>
+    <p>（从小梅尔的性格来看……应该不会认为敌人会优待被捕的对手。</p>
     <p>对优先了那样的欲望，效率无视的奇行不利吧。</p>
     <p>那么，那个孩子最先调查的就是地下室了……）</p>
     <p>梅赛德斯现在一定在找错地方吧。</p>
