--- a/OEBPS/Text/c073.xhtml
+++ b/OEBPS/Text/c073.xhtml
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <h1>73.  规格外的女帝</h1>
+    <h1>73. 规格外的女帝</h1>
     <p>城内变成了战场。</p>
-    <p>奥克和哥布林并列着被频繁驱除的魔物，但其战力并不低。</p>
+    <p>猪人和哥布林并列着被频繁驱除的魔物，但其战力并不低。</p>
     <p>厚厚的皮下脂肪超过2米。即使是很轻的个体，体重也不会下降150公斤，是能举起岩石的力量。并且支撑巨大身体的骨。</p>
     <p>如果是身体能力较高的吸血鬼的话，就算是炫耀自己力量也能取胜的魔物，但如果数量一致的话还是很麻烦的对手。</p>
     <p>不管城里的骑士们多么精锐，对于突然的袭击，无法采取最好的行动，无论如何都要落后一步。</p>
@@ -35,12 +35,12 @@
     <p>再者，男性士兵的处理比士兵还要下。我想是像警卫员一样的东西。</p>
     <p>但是罗杰的美貌和剑术，美貌和高洁，并且主要根据美貌被放在一眼。</p>
     <p>也就是说外观优先。这个国家已经不行了。</p>
-    <p>不管怎样，作为那样不行的国家的士兵长的罗杰，现在被Oku的群体包围拘束了。</p>
+    <p>不管怎样，作为那样不行的国家的士兵长的罗杰，现在被猪人的群体包围拘束了。</p>
     <p>“你想干什么！真想把我搞得乱七八糟，被性欲支配的肮脏的猪一伙！</p>
     <p>好吧……但是别忘了！即使身体被污秽到心也不屈服！</p>
-    <p>我绝对不会输给OK之类的！”</p>
+    <p>我绝对不会输给猪人之类的！”</p>
     <p>这不是明明知道还故意这么说的吗？</p>
-    <p>奥克一面看着吐出如此出色的经典台词的罗杰，一面为难地相视着。</p>
+    <p>猪人一面看着吐出如此出色的经典台词的罗杰，一面为难地相视着。</p>
     <p>这该如何是好？不管怎么做，我们都被阉了啊。</p>
     <p>好像听到了那样的话，一脸为难。</p>
     <p>「那怎么了？不来吗！？</p>
@@ -48,7 +48,7 @@
     <p>要干就赶快干吧！哎呀—！”</p>
     <p>好吧，放着吧。汉娜这样想。</p>
     <p>可是汉娜那样想，另一人好象也不同。</p>
-    <p>菲利克斯停下脚步，盯着奥克他们。</p>
+    <p>菲利克斯停下脚步，盯着猪人他们。</p>
     <p>“糟糕，女人被袭击了……！汉娜小姐，请稍等一下」</p>
     <p>「诶？那个要帮忙吗？</p>
     <p>“当然了！如果就这样置之不理会怎么样呢……”</p>
@@ -58,12 +58,12 @@
     <p>对于这样的他来说，没有放任被袭击的女性这样的选择。</p>
     <p>没错，即使那位女性可能是心理作用吧，脸红着脸大喘气，那也是应该帮助的对象。</p>
     <p>“觉悟！”</p>
-    <p>菲利克斯捡起掉在地板上的剑，快速地切入oku。</p>
-    <p>看到这一幕的Oku一边想着“哇，好女骑士”一边死去了。</p>
-    <p>接着被放出的第二击砍掉另外的Oku的头，他一边想着「不被阉割就不能放任不管，是个好女人」一边死去了。</p>
-    <p>最后被贯穿了心脏的Oku一边想「比起还是被袭击感到喜悦的bitch，是高洁的女骑士哟」满足一边死了。</p>
-    <p>本应被杀的OOKU们的死相，不知为何大家都很开心。</p>
-    <p>于是，菲利克斯砍倒了奥克斯，抱着蔷薇跳跃，从奥克群中脱离。</p>
+    <p>菲利克斯捡起掉在地板上的剑，快速地切入猪人。</p>
+    <p>看到这一幕的猪人一边想着“哇，好女骑士”一边死去了。</p>
+    <p>接着被放出的第二击砍掉另外的猪人的头，他一边想着「不被阉割就不能放任不管，是个好女人」一边死去了。</p>
+    <p>最后被贯穿了心脏的猪人一边想「比起还是被袭击感到喜悦的bitch，是高洁的女骑士哟」满足一边死了。</p>
+    <p>本应被杀的O猪人们的死相，不知为何大家都很开心。</p>
+    <p>于是，菲利克斯砍倒了猪人斯，抱着蔷薇跳跃，从猪人群中脱离。</p>
     <p>那个动作是漂亮的，现在马上作为骑士也是通用的水平。</p>
     <p>菲利克斯绝对不弱。只是比较对象有点奇怪而已。</p>
     <p>“没事吧？”</p>
