--- a/OEBPS/Text/c075.xhtml
+++ b/OEBPS/Text/c075.xhtml
@@ -80,8 +80,8 @@
     <p>在天花板滑雪板上飞的是皮可。</p>
     <p>舒夫右手拿着菜刀，左手拿着平底锅。再也不干这家伙了。</p>
     <p>对非常生气恶心的warui·果冻，作为那个强化型的totemowarui·果冻。</p>
-    <p>其他对蟑螂Oku，后方支援的蟑螂hekusa。</p>
-    <p>并且召唤了视觉的骚扰的ushihon·oku和完全统一看不见的集体。</p>
+    <p>其他对蟑螂猪人，后方支援的蟑螂hekusa。</p>
+    <p>并且召唤了视觉的骚扰的ushihon·猪人和完全统一看不见的集体。</p>
     <p>梅赛德斯想，与其他的迷宫相比，我们的迷宫是不是太没有统一性了呢？</p>
     <p>话虽如此，阿修塔鲁比克和贝赛德兽舒夫本来就是他们的魔物，所以那里也并非只有植物系吧。</p>
     <p>贝阿朵莉克斯大概也注意到了这一点吧，脸色稍微变蓝了。</p>
@@ -93,20 +93,20 @@
     <p>木偶人的去向阻止了华尔伊·果冻，虽然受到拳头的弹幕但却丝毫没有动。</p>
     <p>木偶的拳头全部只是空落在果冻的身体里，不久木偶人被塞进了果冻中。</p>
     <p>“女人……女人……”</p>
-    <p>胯间的马赛克难看的usihon·oku无视魔物笔直地向beartorixu直行了。</p>
-    <p>可是被从横(侧)跳入了的植物切断了马赛克，退化了为灰姑娘·oku。</p>
+    <p>胯间的马赛克难看的usihon·猪人无视魔物笔直地向beartorixu直行了。</p>
+    <p>可是被从横(侧)跳入了的植物切断了马赛克，退化了为灰姑娘·猪人。</p>
     <p>猪是没有用的。</p>
     <p>因为积分的浪费，梅赛德斯决定不再批量生产了。</p>
     <p>“哇哦哦哦哦哦！”</p>
     <p>总觉得紧张的本凯挥舞着武器，展现出一骑当千的活跃。</p>
     <p>一个接一个地切开植物，完全敌人不靠近。</p>
     <p>“弗兰贝！”</p>
-    <p>从平底锅里发出火焰，用奇怪的技能烧掉植物的是施夫。</p>
+    <p>从平底锅里发出火焰，用奇怪的技能烧掉植物的是舒夫。</p>
     <p>梅赛德斯露出了奇怪的表情，说你用过那种技能。</p>
     <p>无意中看到贝阿朵莉克斯，她也露出“诶，那是什么”的表情。</p>
     <p>“女人……女人……”</p>
-    <p>通常的OKU们无视其他的敌人以贝阿朵列克斯作为目标冲来了。</p>
-    <p>可是又被从横(侧)跳出了的植物切断胯之间的弱点退化了为kyoseizumi·oku。</p>
+    <p>通常的猪人们无视其他的敌人以贝阿朵列克斯作为目标冲来了。</p>
+    <p>可是又被从横(侧)跳出了的植物切断胯之间的弱点退化了为kyoseizumi·猪人。</p>
     <p>果然没用啊。梅赛德斯想，奥克只批量生产了京城蝉就好了。</p>
     <p>“喂，从那边开始，把周围都塞进去。”</p>
     <p>“哦！”</p>
