--- a/OEBPS/Text/c077.xhtml
+++ b/OEBPS/Text/c077.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>77.  不需要那个权利</h1>
+    <h1>77. 不需要那个权利</h1>
     <p>当汉娜和菲利克斯到达地下时，那里的惨状不断扩大。</p>
     <p>墙壁的每个地方都有深深的伤痕，天花板裂痕，地板碎裂。</p>
     <p>不知是被囚犯们卷入其中的几人已化为尸体，幸存者们胆战心惊。</p>
@@ -19,11 +19,11 @@
     <p>移动到了广阔的战场……不好吃！）</p>
     <p>捕获期间也调查过，汉娜大体上掌握着这座城的构造。</p>
     <p>而且她已经正确地看穿了这里发生了什么。</p>
-    <p>那个奥克的袭击是梅赛德斯的指南。那肯定。</p>
+    <p>那个猪人的袭击是梅赛德斯的指使。那肯定。</p>
     <p>而且贝亚特里克斯也注意到了这一点吧。</p>
     <p>因为帝都周围被城墙包围，再加上附近没有发生岩石的地牢。</p>
-    <p>从哪里的迷宫溢出的Oku附近住到的可能性不是零,不过，尽管如此这么多住宿的事等难考虑，更不用说城墙不被注意突破等不可能。</p>
-    <p>那么答案只有一个。奥克的群体只能认为突然出现在城前，如果明白那里迷宫的所有者在的话简单地能引导出来。</p>
+    <p>从哪里的迷宫溢出的猪人附近住到的可能性不是零,不过，尽管如此这么多住宿的事等难考虑，更不用说城墙不被注意突破等不可能。</p>
+    <p>那么答案只有一个。猪人的群体只能认为突然出现在城前，如果明白那里迷宫的所有者在的话简单地能引导出来。</p>
     <p>并且所有者特意那样袭击的理由是贝阿朵列克斯的暗杀，或是被捉住的公主女的夺回的哪边。</p>
     <p>贝阿朵里克斯认为此次袭击的原因是夺回公主，并且看穿了犯人首先要寻找地下牢。</p>
     <p>然后在地下贝阿列克斯发现梅赛德斯并交战……这样就可以了。</p>
@@ -35,7 +35,7 @@
     <p>而且……不是继承人。是自力攻略的『攻略者』。</p>
     <p>到底是怎么做的呢？</p>
     <p>连汉娜都无法把握迷宫的全貌，充满了谜团。</p>
-    <p>其实Hanna自己，到达了迷宫的最深处。</p>
+    <p>其实汉娜自己，到达了迷宫的最深处。</p>
     <p>与自己选择的精锐队伍进行挑战，牺牲了数人，食物也吃到最底层，她成功地走到最底层。</p>
     <p>但是，在那里只有金的门···。</p>
     <p>从那里带回多数的财宝，对王家贡献越发提高了立场,不过，汉娜到攻略地牢没达到。</p>
