--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -34,7 +34,7 @@
     <p>“我是后生！让我成为你的妻子吧！不然老公也行！”</p>
     <p>……暂且拘束放入迷宫吗？然后立个影武者，洗脑，和汉娜交谈就可以了。</p>
     <p>梅赛德斯得出结论，试图启动蓝牙izen。</p>
-    <p>但是正好那个时机，为何hanna从头落下了。</p>
+    <p>但是正好那个时机，为何汉娜从头落下了。</p>
     <p>“梅尔，梅尔，你没事吧！？”</p>
     <p>「啊，啊……汉娜好像没问题”</p>
     <p>“嗯，可能有点头痛。比起那种事，这是什么状况？”</p>
@@ -85,7 +85,7 @@
     <p>“呼……终于全灭了吗？丑恶的猪”</p>
     <p>擦拭着额头的汗水，蔷薇花一口气喘吁吁。</p>
     <p>进入城中的橡树群平安地扫荡完毕，恢复了平静。</p>
-    <p>因为使用了不象Okusa的游击队战法和联合所想之外使之苦战,不过，还是象正规的骑士和士兵取后一样的事没有。</p>
+    <p>因为使用了不象猪人sa的游击队战法和联合所想之外使之苦战,不过，还是象正规的骑士和士兵取后一样的事没有。</p>
     <p>城里涌出的橡树也已经被讨伐了吧。</p>
     <p>在那里，她们的王贝阿朵里克斯出现了。</p>
     <p>“看来猪已经被宰了吧，洛杉矶士兵长”</p>
