--- a/OEBPS/Text/c088.xhtml
+++ b/OEBPS/Text/c088.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>88.  相连的情报</h1>
+    <h1>88. 相连的情报</h1>
     <p>与罗勒的接触已经过了三天。</p>
     <p>梅赛德斯从那以后，一有空就到格鲁内瓦特府邸的书房里调查当时的事情，很遗憾，并没有什么新奇的消息。</p>
     <p>哎呀，『迷宫攻略者愚蠢的国王暗杀了』之类留下书不应该留下，如果说当然当然。</p>
@@ -128,7 +128,7 @@
     <p>非常讨厌的预感。如果可以的话我不希望中奖。</p>
     <p>偶然的巧合……肯定是那样。不，请决定。</p>
     <p>如果不是那样的话，会变得很麻烦。</p>
-    <p>“……菲利克斯……头发的颜色和父亲和瓦尔布加夫人都不一样啊”</p>
+    <p>“……菲利克斯……头发的颜色和父亲和瓦尔堡加夫人都不一样啊”</p>
     <p>“嗯？嗯，是啊”</p>
     <p>“而且和菲利克斯一样的金发是威尔布加的家……也就是说没有yunkasu家吧？”</p>
     <p>「啊。啊，嗯。是吗？”</p>
