--- a/OEBPS/Text/c090.xhtml
+++ b/OEBPS/Text/c090.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>90.  不忍心的暗杀者</h1>
+    <h1>90. 不忍心的暗杀者</h1>
     <p>明早……大家安静下来的时候。</p>
     <p>在朝阳的照射下，多个影子开始活动。</p>
     <p>以人的感性来看“他们有忍耐的意思吗？”想说的情景,不过，吸血鬼夜里视力很强，但是对光弱。</p>
@@ -92,7 +92,7 @@
     <p>只是，在迷宫内捉住侵入者，让魔物袭击。就那么些。</p>
     <p>在迷宫内死亡的暗杀者可以成为DP的肥料，成为下一个魔物的种子。</p>
     <p>如果里面交给汉娜们没有问题，外边也大体上全灭吗？</p>
-    <p>真费事。我们只是想得到瓦尔布加的真正身份的证据，没想到会陷入这样麻烦的暗杀者退治的困境。</p>
+    <p>真费事。我们只是想得到瓦尔堡加的真正身份的证据，没想到会陷入这样麻烦的暗杀者退治的困境。</p>
     <p>把暗杀者全部变成迷宫养分的梅赛德斯，看到了稍微离开了的位置有的林。</p>
     <p>不知道是财力的夸示还是单纯的打扮，在宅邸的占地内……那也是在包围住宅的墙壁内侧造林怎样呢。</p>
     <p>这样的话，入侵者不是随意隐藏的吗？</p>
