--- a/OEBPS/Text/c093.xhtml
+++ b/OEBPS/Text/c093.xhtml
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <h1>93.  简单的审问</h1>
+    <h1>93. 简单的审问</h1>
     <p>抓住尤利亚的梅赛德斯和汉娜决定租一间房子去问她。</p>
     <p>汉娜首先用理所当然的脸把尤利亚的衣服剥下来，露出内衣的样子，固定在椅子上，用坚固的绳子绑起来。</p>
     <p>汉娜说“不知道衣服下面藏着什么”。</p>
     <p>实际上，短刀、魔石、手里剑之类的东西都是哗啦哗啦地出现的，这是正确的判断吧。</p>
     <p>而且还抢走了内衣，用合适的布代替，遮住了身体。</p>
     <p>只是头通过的孔空着的简单,不过，由于这个姑且能遮住。</p>
-    <p>可是手臂和脚变得不能隐藏，hanna彻底能看见。</p>
+    <p>可是手臂和脚变得不能隐藏，汉娜彻底能看见。</p>
     <p>不，这也算是感情用事吧。如果真是彻底的话，应该会抢下内衣，裸体进行询问。</p>
     <p>顺带一提，从内衣里面也好好地使用武器……或者说用指尖采集的尺寸的刀被发现了。</p>
     <p>“小心啊”</p>
@@ -114,9 +114,9 @@
     <p>但是有确信。菲利克斯肯定是这样的。</p>
     <p>一般来说，只是巧合的可能性比较高。</p>
     <p>菲利克斯的头发的颜色和父母不一致，纵览亲属也没有金发。</p>
-    <p>而抓住克里斯托夫的女儿的是瓦尔布加的父亲。</p>
+    <p>而抓住克里斯托夫的女儿的是瓦尔堡加的父亲。</p>
     <p>只是如此而已……能连接到这次的一件事太短虑了。</p>
-    <p>考虑只是varuburuga出轨了自然的。倒不如现在那样更轻松。</p>
+    <p>考虑只是瓦尔堡加出轨了自然的。倒不如现在那样更轻松。</p>
     <p>但是，那位伯恩哈特难道看不清它吗？</p>
     <p>这么想的话，菲利克斯的原形无论如何也变成了克里斯托夫的血缘这个事。</p>
     <p>不管怎么说，如果能脱离就好了……怀着这样无用的愿望，汉娜等着尼级夫妇起床。</p>
