--- a/OEBPS/Text/c094.xhtml
+++ b/OEBPS/Text/c094.xhtml
@@ -34,7 +34,7 @@
     <p>我不想让被暗杀的父亲走同一条路。希望自己的孩子得到所说的『gurunevarut』确实的自己守护的力量。</p>
     <p>或者，由于自己不是真正的女儿的事经常感到疏远感一样的东西。</p>
     <p>正因为如此，至少对自己的孩子……菲利克斯肯定是自己和伯恩哈特的孩子，希望他能得到与自己不一样的地方。</p>
-    <p>那样的心情先行，暴走的是以前的varuburuga。</p>
+    <p>那样的心情先行，暴走的是以前的瓦尔堡加。</p>
     <p>汉娜觉得瓦尔堡加很可怜，觉得那样也很拼命。</p>
     <p>即使隐瞒了，也不知道什么时候会暴露。</p>
     <p>如果暴露了，可能会像父亲一样被杀害。</p>
