--- a/OEBPS/Text/c096.xhtml
+++ b/OEBPS/Text/c096.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>96.  王都袭击</h1>
+    <h1>96. 王都袭击</h1>
     <p>家族知道菲利克斯的来历之后，经过了数日。</p>
     <p>真正的王派现在没有行动，也没有送来暗杀者的模仿。</p>
     <p>梅赛德斯从那以后，和汉娜一起登上了以前被带到过的他们的基地，遗憾的是只是一个仓库。</p>
@@ -64,7 +64,7 @@
     <p>再生能力和强度优秀的吸血鬼基本上不会下垂，因此很多女性讨厌睡觉时被束缚的感觉，什么都不能穿。</p>
     <p>这样看来，以前是男装的，真让人吃惊。</p>
     <p>“我接下来要进入殿下的防守了。</p>
-    <p>其他暂且不谈，尤利亚来的话大概不是我或者梅鲁的话不能防御。</p>
+    <p>其他暂且不谈，尤利亚来的话大概不是我或者梅尔的话不能防御。</p>
     <p>如果梅尔去王都的话，应该会早点解决的……”</p>
     <p>“……不，我也是留在这里比较好吧。</p>
     <p>既然不明白敌人的目标，就应该把战斗力集中到最重要的吉克林德防御上”</p>
