--- a/OEBPS/Text/c098.xhtml
+++ b/OEBPS/Text/c098.xhtml
@@ -78,7 +78,7 @@
     <p>跟随ZEVEN的引导，结果在公共浴场的那些**们裸露的困境下真的想把它扔掉。</p>
     <p>说到底他们的导航就是指全身青紧身衣的少年机器人在玩滑雪板的时候在周围飞来飞去《滑动滑行！》和在偏离的定时发出指示的导航器没有作用。</p>
     <p>可是不擅长的子弹也数击中了。</p>
-    <p>几次徒劳的末了，梅赛德斯想办法到达正确的解答，与hanna一起拿着地牢钥匙。</p>
+    <p>几次徒劳的末了，梅赛德斯想办法到达正确的解答，与汉娜一起拿着地牢钥匙。</p>
     <p>“是那个吗？”</p>
     <p>“啊，没错……”</p>
     <p>汉娜的问题中，梅赛德斯回答得有些靠不住。</p>
