--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>102.  新的迷宫</h1>
+    <h1>102. 新的迷宫</h1>
     <p>马克斯.战斗的待遇以惊人的速度被决定了。</p>
     <p>首先，最初只是形式的审判，理所当然地成为了有罪判决。</p>
     <p>关于这点，因为看到那场战斗的全体都是目击者，所以无可奈何。</p>
@@ -24,8 +24,8 @@
     <p>“将国民认可的沉重的罪行和裁决给予麦克斯，也希望吉克林德能够接受”接受了汉娜的胡作非为，梅赛德斯考虑马上和贝阿朵列克斯时一样进行复制。</p>
     <p>这个时候，认为只是为了被处刑而生的复制不需要思考力的梅赛德斯对zuverfu做了胡闹动作，要求了脑比原创小就行。</p>
     <p>虽然觉得这可能是不可能的，但是如果不故意制造原本应该做的零件就好了，所以很灵活。</p>
-    <p>齐维尔夫说“至今为止几乎没有人提出过这样的要求”。那是当然的。</p>
-    <p>但是，通过这个判明，如果故意使性能恶化的话，也可以有意地制造出新种类的魔物。因为也能成为点节约今后制作削减了.的oku啦也说不定。</p>
+    <p>zwölf说“至今为止几乎没有人提出过这样的要求”。那是当然的。</p>
+    <p>但是，通过这个判明，如果故意使性能恶化的话，也可以有意地制造出新种类的魔物。因为也能成为点节约今后制作削减了.的猪人啦也说不定。</p>
     <p>……啊，那个已经有了吗？</p>
     <p>然后把没有做好意思的马克斯肉偶人作为替身，成功地让马克斯生存下来。</p>
     <p>顺便说一下，因为迷宫的事情不能向吉克林德说出来，关于替身，他解释说“有两个像样的山贼很幸运地找到了，所以就用了他”。</p>
