--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>104.  受理委托 “小梅鲁可以攻略了” </h1>
+    <h1>104. 受理委托 “小梅尔可以攻略了” </h1>
     <p>这是协商的结果，汉娜不情愿得出的结论。 包括汉娜自己的精锐无法攻占迷宫。 那样的话，把吉克林德和菲利克斯送出地牢这件事本身变得困难。 到最下层的道路还需要派遣先遣队把情报带回去，这样才能比较安全的进行。</p>
     <p>但是只有和迷宫的守护者在迷宫系统上战斗，无论如何努力都是第一次看到。 说到底，最后绝对需要“战胜初见强敌的力量”。 从这个意义上来说，被暗杀的克里斯托夫也是毫无疑问的杰出人物吧。 可是看此后目瞪口呆地被暗杀了，与守护者的战斗中负了轻伤吗？</p>
     <p>但是，吉克林德和菲利克斯没有那种强度。 虽然那两个人都很强，但要说能战胜迷宫的守护者的程度，很遗憾胜率很低吧。 当然被选拔出来的护卫也同行,不过，把汉娜作为首的走破组不能进入。 用这个战力挑战不仅仅是攻略，失去吉克林德和菲利克斯的风险更高……汉娜是这样判断的。</p>
