--- a/OEBPS/Text/c108.xhtml
+++ b/OEBPS/Text/c108.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>108.  没有被评价的才能</h1>
+    <h1>108. 没有被评价的才能</h1>
     <p>暂时离开迷宫的梅赛德斯前往行会，报告了达成委托的事情。</p>
     <p>因为捕获了的皮琼也交给了接待处，过一会经受理应该到达委托人的地方。</p>
     <p>委托人和saker之间不直接交换是行会所决定的规则，除了需要详细商谈以外，基本上委托人和接受方不会碰面。</p>
@@ -105,7 +105,7 @@
     <p>普通地考虑的话，她的才能不被评价的那样奇怪,不过，反正是魔法存在的世界。</p>
     <p>她所做的事，也许从其他方面来看都是没有效率的。</p>
     <p>「啊，好！那么就特别的，让我看看我伟大的发明吧！”</p>
-    <p>如果Oku也煽动想办法。</p>
+    <p>如果猪人也煽动想办法。</p>
     <p>在梅赛德斯的脑内印象中，乘坐在橡树上的莱斯利气势汹汹地攀登在树上，但并不敢说出来。</p>
     <p>姑且不论，把跟她的关系好好地搞好是不会有损失的吧。</p>
     <p>梅赛德斯拜托大家一定要看看她所说的伟大的发明。</p>
