--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>123.  第三次的考验</h1>
+    <h1>123. 第三次的考验</h1>
     <p>“——嗯？”</p>
     <p>最初从口中露出来的是这样愚蠢的声音。</p>
     <p>他首先感觉到的是冲击。脚被什么东西撞到了，以为身体摇晃得很厉害的下一个瞬间，脚无力地倒下了。</p>
@@ -62,7 +62,7 @@
     <p>即使是放在桃子上运用，开销也太重了。</p>
     <p>如果能再加上新的防御，那就太好了。</p>
     <p>然后决定把莱斯利也晾在一边。果然，守护她的风险太大了。</p>
-    <p>“那我走了。我交给你了”</p>
+    <p>“那我走了。这里交给你了”</p>
     <p>「啊。交给我吧」</p>
     <p>“哇！”</p>
     <p>和本凯和小黑打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
@@ -71,7 +71,7 @@
     <p>虽然加入了新加入的多米尼翁和尤里亚是不安的材料，但是考虑到与战场的相性，得出了这两个人最好的结论。</p>
     <p>穿过门，穿过长长的通道。</p>
     <p>穿过那前面的门，看到的是黑色和金色的门。</p>
-    <p>回想起来，这两扇门是五年前第一次看到了吗。他扛着哈弗，等待着地下城的试练。</p>
+    <p>回想起来，这两扇门是五年前第一次看到了吗。他扛着哈尔巴德，等待着地下城的试练。</p>
     <p>“终于到了这里。探险家啊」</p>
     <p>声音在大厅里回响。</p>
     <p>和茨瓦尔夫时不同，是一个粗野的男人的声音。</p>
