--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>42.  帝国的想法</h1>
+    <h1>42. 帝国的想法</h1>
     <p>我在房间里看了一封合同。</p>
     <p>那是从伊扎克私人房间的保险柜出来的东西，上面写着左右今后国家行踪的内容。</p>
     <p>伯恩哈特曾经有一个疑问。</p>
@@ -21,7 +21,7 @@
     <p>伊扎克养吉克林德父女，定期采集血液的事根据调查判明。</p>
     <p>于是，汉娜又从王城工作的厨师那听说了把血给自己的孩子。</p>
     <p>……说点题外话，那位厨师在尽情吐露情报后被汉娜的手处刑。</p>
-    <p>然而，汉娜从外面雇佣的厨师却是格鲁内瓦特家的厨师长施夫，这让柏恩哈特也大吃一惊。</p>
+    <p>然而，汉娜从外面雇佣的厨师却是格鲁内瓦特家的厨师长舒夫，这让柏恩哈特也大吃一惊。</p>
     <p>总之先把话说回来。</p>
     <p>那个愚****，因为持续给予自己的孩子吉克林德的血的事，不知不觉变得能使用王剑的可能性依靠着。</p>
     <p>当然不可能用那种方法将迷宫的所有权转移。</p>
