--- a/OEBPS/Text/c119.xhtml
+++ b/OEBPS/Text/c119.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>119.  崩溃的平衡</h1>
+    <h1>119. 崩溃的平衡</h1>
     <p>捕获了多米尼安的梅赛德斯决定再去地下城一次。</p>
     <p>外面天空就像是日落时一样，开始变暗。</p>
     <p>在试炼前，梅赛德斯确保了多米尼翁这一优秀的战力，但梅赛德斯并不乐观，认为他会直接在正式行动中出场。</p>
@@ -56,7 +56,7 @@
     <p>“没有异议。跟随胜利者吧”</p>
     <p>“什么嘛，听起来真好听啊。”</p>
     <p>虽然预计会有一点被拒绝，但与梅赛德斯的想法相反，多米尼翁很爽快地接受了跟随梅赛德斯的要求。</p>
-    <p>细细想来，施夫明明什么都没做，却自然而然地成为了梅赛德斯的部下，说不定意外的是不仅限于奥加种，魔物本身就有着向打败自己的对手表示敬意的本能。</p>
+    <p>细细想来，舒夫明明什么都没做，却自然而然地成为了梅赛德斯的部下，说不定意外的是不仅限于奥加种，魔物本身就有着向打败自己的对手表示敬意的本能。</p>
     <p>当然，根据种类和个体的不同也会有差异，像奥加种那样，“对打倒自己的对手无条件绝对服从”是很少见的。</p>
     <p>“那我有想问的事情。你所在的地牢，直到最近都有主人吗？”</p>
     <p>“恩。正如你所想的那样，确实在前几天还有‘继承者’”</p>
